--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -1,5 +1,16 @@
-<h1>Artists</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Artists</title>
+</head>
+<body>
 
-<% @artists.each do |artist| %>
-    <a href='/artists/<%= artist.slug%>'><%= artist.name %></a>
-<% end %>
+	<h1>Artists:</h1>
+
+	<ul>
+		<% @artists.each do |artist| %>
+			<li><a href="/artists/<%= artist.slug %>"><%= artist.name %></a></li>
+		<% end %>
+	</ul>
+</body>
+</html>
