--- a/app/views/artists/show.erb
+++ b/app/views/artists/show.erb
@@ -1,15 +1,27 @@
- <h1><%= @artist.name %></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Document</title>
+</head>
+<body>
+	<h1><%= @artist.name %></h1>
 
- <h2>Songs:</h2>
- <ol>
-    <% @artist.songs.each do |song| %>
-        <li><a href='/songs/<%= song.slug %>'><%= song.name %></a></li>
-    <%end%>
- </ol>
+	<div>
+		<h3>Songs:</h3>
+		<ul>
+			<% @artist.songs.each do |song| %>
+				<li><a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
+			<% end %>
+		</ul>
+	</div>
 
-<h2>Genres:</h2>
- <ol>
-    <% @artist.genres.each do |genre| %>
-        <li><a href='/genres/<%= genre.slug %>'><%= genre.name %></a></li>
-    <%end%>
- </ol>
+	<div>
+		<h3>Genres:</h3>
+		<ul>
+			<% @artist.genres.each do |genre| %>
+				<li><a href="/genres/<%= genre.slug %>"><%= genre.name %></a></li>
+			<% end %>
+		</ul>
+	</div>
+</body>
+</html>
