--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -1,13 +1,27 @@
-<h1>Genre - <%= @genre.name.capitalize %></h1>
-<p><u>Songs:</u></p>
-<ul>
-  <% @genre.songs.each do |s| %>
-    <li><a href="/songs/<%= s.slug %>"><%= s.name %></a></li>
-  <% end %>
-</ul>
-<p><u>Artists:</u></p>
-<ul>
-  <% @genre.artists.each do |a| %>
-    <li><a href="/artists/<%= a.slug %>"><%= a.name %></a></li>
-  <% end %>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Document</title>
+</head>
+<body>
+	<h1><%= @genre.name %></h1>
+
+	<div>
+		<h3>Artists:</h3>
+		<ul>
+			<% @genre.artists.each do |artist| %>
+				<li><a href="/artists/<%= artist.slug %>"><%= artist.name %></a></li>
+			<% end %>
+		</ul>
+	</div>
+
+	<div>
+		<h3>Songs:</h3>
+		<ul>
+			<% @genre.songs.each do |song| %>
+				<li><a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
+			<% end %>
+		</ul>
+	</div>
+</body>
+</html>
