--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,15 +1,25 @@
-<h1>Edit Your Song</h1>
-<form action="/songs/<%= @song.slug %>" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  <label>Name:</label><input type="text" id="Name" name="song[name]" value="<%= @song.name %>"><br><br>
-  <label>Artist:</label><input type="text" id="Artist Name" name="song[artist]" value="<%= @song.artist.name %>"><br><br>
-  <label>Genres:</label><br>
-  <% Genre.all.each do |genre| %>
-    <input type="checkbox" id="<%= genre.name %>" name="song[genres][]" value="<%= genre.id %>" <%='checked' if @song.genres.include?(genre) %>>
-    <%= genre.name %>
-    </input>
-    <br>
-  <% end %>
-  <br>
-  <input type="submit" value="Save">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Edit</title>
+</head>
+<body>
+	<h1>Edit:</h1>
+
+	<form action="/songs/<%= @song.slug %>" method="post">
+		<input type="hidden" id="hidden" name="_method" value="patch">
+		<input type="text" name="song[name]" value="<%= @song.name %>">
+
+		<h3>Artist:</h3>
+		<input type="text" id="Artist Name" name="artist[name]" value="<%= @song.artist.name %>">
+
+
+		<h3>Genres:</h3>
+		<% Genre.all.each do |genre| %>
+			<input type="checkbox" name="genres[]" id="<%= genre.name %>" value="<%= genre.id %>"><%= genre.name %> <br>
+		<% end %>
+
+		<input type="submit" value="Save">
+	</form>
+</body>
+</html>
