--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,12 +1,30 @@
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
-<% end %>
-<h1>Song - <%= @song.name %></h1>
-<h3>By <a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a></h3>
-<p><u>Genres:</u></p>
-  <ul>
-    <% @song.genres.each do |g| %>
-      <li><a href="/genres/<%= g.slug %>"><%= g.name %></a></li>
-    <% end %>
-  </ul>
-<a href="/songs/<%= @song.slug %>/edit"><input type="button" value="Edit Song"></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Document</title>
+</head>
+<body>
+
+	<% if flash.has?(:message) %>
+	  <%= flash[:message] %>
+	<% end %>
+
+	<h1><%= @song.name %></h1>
+
+	<div>
+		<h3>Artist:</h3>
+		<div>
+			<a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a>
+		</div>
+	</div>
+
+	<div>
+		<h3>Genres:</h3>
+		<ul>
+			<% @song.genres.each do |genre| %>
+				<li><a href="/genres/<%= genre.slug %>"><%= genre.name %></a></li>
+			<% end %>
+		</ul>
+	</div>
+</body>
+</html>
